--- a/admin/src/main/resources/application.yml
+++ b/admin/src/main/resources/application.yml
@@ -17,6 +17,7 @@ spring:
   ## 数据库配置
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
+#    url: jdbc:mysql://127.0.0.1:3306/aliyun?useSSL=false&characterEncoding=utf-8
     url: jdbc:mysql://127.0.0.1:3306/aliyun?useSSL=false&characterEncoding=utf-8
     username: root
     password: root
